src/components/Checkout.module.scss
@import '../vars';

.checkout {
  display: block;
  padding-top: 125px;
  margin-left: auto;
  margin-right: auto;

  .aboveCard {
    text-align: center;
    font-size: larger;
    font-weight: bold;
    margin-bottom: 14px;
    box-shadow: 1px 2px rgba(0, 0, 0, 0.25);
    color: $primaryColor;
  }

  .underCard {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    button {
      width: 150px;
      background-color: $primaryColor;
      border-color: $primaryColor;
    }
    button:hover {
      box-shadow: 2px 3px $shadow-light;
    }
  }

  .mainCard {
    min-width: 35rem;
    box-shadow: 1px 2px rgba(0, 0, 0, 0.25);
    margin-bottom: 14px;
    .productItem:hover {
      box-shadow: 3px 3px 3px 3px $shadow-light;
    }
    .emptyCart {
      text-align: center;
      font-size: larger;
      color: $primaryColor;
    }
    .productItem {
      border: 1px solid rgba(0, 0, 0, 0.125);
      border-radius: 0.25rem;
      margin-bottom: 10px;
      box-shadow: 1px 2px rgba(0, 0, 0, 0.25);
      .productName {
        float: left;
      }
      .productInformation {
        display: flex;
          flex-direction: row;
          align-items: right;
          float: right;

        .totalPrice {
          display: flex;
          flex-direction: row;
          align-items: right;
          float: left;
        }

        .productItemButtons {
          display: flex;
          flex-direction: row;
          align-items: right;
          float: right;
        }

        .cartAmount {
          padding: 4px;
          width: 36px;
          text-align: center;
        }
      }
    }
  }
}

